--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
+html {
+    scroll-behavior: smooth;
+  }
+  
 body{
     font-family: 'Poppins', sans-serif;
 }
@@ -7,6 +11,7 @@ body{
 :root{
     --padding-container: 100px 0;
     --color-title: #001a49;
+    
 }
 
 /* front page */
@@ -37,7 +42,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url('../images/jesuscamilo_frontpage.jpg');
+    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url('../images/fondo\ perfil.png');
     background-size: cover;
     clip-path: polygon(100% 0, 100% 80%, 50% 100%, 0 80%, 0 0);
     z-index: -1;
